# cc-truenas-drivetemp

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  build.rs  config.example.toml
plugin-files/: manifest.toml
scripts/: install.sh
src/: main.rs
src/config/: mod.rs  normalize.rs  plugin_config.rs  tests.rs  truenas_config.rs
src/polling/: channels.rs  mod.rs  poll_snapshot.rs  poller.rs  selection.rs  temp_channel.rs
src/polling/state/: cached_state.rs  mod.rs  shared_state.rs
src/proto/: mod.rs
src/runtime/: args.rs  logging.rs  mod.rs  signals.rs  socket.rs
src/service/: mod.rs  truenas_drive_temp_service.rs
src/truenas/: mod.rs  temperature.rs  transport.rs  truenas_client.rs
src/truenas/models/: disk_info.rs  disk_query_item.rs  drive_temperature.rs  mod.rs  rpc_error.rs  rpc_response.rs
